# My-first-MCP-server

./: .gitignore  README.md  pyproject.toml
mcp-employee-leave/: README.md  claude_desktop_config_fixed.json  employee_data.json  mcp_config.yaml  requirements.txt  server.py  server_wrapper.py  test_tools.py
mcp_leave_server/: __init__.py  database.py  main.py  models.py  schemas.py
